force-app/main/default/objects/DataTableConfig__mdt/DataTableConfig__mdt.object-meta.xml
<CustomObject>
    <label>DataTableConfig</label>
    <pluralLabel>DataTableConfigs</pluralLabel>
</CustomObject>