force-app/main/default/objects/DataTableConfig__mdt/fields/Enable_Search__c.field-meta.xml
<CustomField>
    <fullName>Enable_Search__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Search</label>
    <type>Checkbox</type>
</CustomField>