force-app/main/default/objects/DataTableConfig__mdt/fields/Enable_Sort__c.field-meta.xml
<CustomField>
    <fullName>Enable_Sort__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Sort</label>
    <type>Checkbox</type>
</CustomField>