force-app/main/default/objects/DataTableConfig__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Salesforce Object API Name.
Example: Account, Case, Opportunity</description>
    <inlineHelpText>Salesforce Object API Name.
Example: Account, Case, Opportunity</inlineHelpText>
    <label>Object API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>