force-app/main/default/objects/DataTableConfig__mdt/fields/Records_Per_Page__c.field-meta.xml
<CustomField>
    <fullName>Records_Per_Page__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Records Per Page</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>