force-app/main/default/objects/DataTableConfig__mdt/fields/Table_Name__c.field-meta.xml
<CustomField>
    <fullName>Table_Name__c</fullName>
    <description>Unique key used by LWC to load config.
Example: Account_List, Case_Queue</description>
    <inlineHelpText>Unique key used by LWC to load config.
Example: Account_List, Case_Queue</inlineHelpText>
    <label>Table Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>