force-app/main/default/objects/DataTableConfig__mdt/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Table heading shown in card header</description>
    <inlineHelpText>Table heading shown in card header</inlineHelpText>
    <label>Title</label>
    <length>120</length>
    <type>Text</type>
</CustomField>